--- a/css/style.css
+++ b/css/style.css
@@ -72,6 +72,25 @@ body {
   color: #fff;
   cursor: pointer;
   padding: 13px 15px;
+  border-radius: 50%;
+  outline: none;
+}
+
+.buttons button:hover {
+  background-color: #fff;
+  color: #333;
+}
+
+@media (max-width: 500px) {
+  .slide .content {
+    bottom: -300px;
+    left: 0;
+    width: 100%;
+  }
+
+  .slide.current .content {
+    transform: translateY(-300px);
+  }
 }
 
 /* Backgorund Images */
