--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,6 @@ body {
   background: #333;
   color: #fff;
   line-height: 1.6;
-  overflow: hidden;
 }
 
 .slider {
@@ -26,7 +25,7 @@ body {
   width: 100%;
   height: 100%;
   opacity: 0;
-  transition: opacity 0.4a ease-in-out;
+  transition: opacity 0.4s ease-in-out;
 }
 
 .slide.current {
@@ -56,13 +55,13 @@ body {
 
 .buttons button#next {
   position: absolute;
-  top: 50%;
+  top: 40%;
   right: 15px;
 }
 
 .buttons button#prev {
   position: absolute;
-  top: 50%;
+  top: 40%;
   left: 15px;
 }
 
